# ariadne

./: .gitignore  BENCHMARKS.md  Dockerfile  LICENSE  README.md  ariadne.config.example.json  claude-md-snippet.md  demo.py  docs_source.py  glama.json  main.py  mcp_server.py  pyproject.toml  server.json  test_feedback_boost.py  test_implicit_feedback.py  test_onnx_embedder.py  test_semantic_hint.py
.github/ISSUE_TEMPLATE/: usage-feedback.yml
.github/workflows/: ci.yml
ariadne_mcp/: ariadne.config.example.json  claude-md-snippet.md  cli.py  evaluation.py  server.py
ariadne_mcp/normalizer/: normalizer.py
ariadne_mcp/query/: query.py
ariadne_mcp/scanner/: auto_detect.py  backend_client_scanner.py  cube_scanner.py  fastapi_scanner.py  frontend_rest_scanner.py  frontend_scanner.py  graphql_scanner.py  http_scanner.py  kafka_scanner.py  ts_http_outbound_scanner.py
ariadne_mcp/scoring/: engine.py
ariadne_mcp/store/: db.py  feedback_db.py
benchmarks/: judgments.jsonl  results.json  run.py  samples.json
benchmarks/judgments/: fastapi-microservices.jsonl  kafka-microservices.jsonl  one-platform.jsonl  spring-petclinic.jsonl
docs/: ADOPTION_METRICS.md  ARCHITECTURE.md  CONFIG.md  CUSTOM_SCANNERS.md  RELEASING.md  architecture.html  demo.tape
docs/demo/: setup.py
examples/: run.py
examples/fastapi-microservices/: README.md  ariadne.config.json  expected.json  metadata.json
examples/kafka-microservices/: README.md  ariadne.config.json  expected.json  metadata.json
examples/one-platform/: README.md  ariadne.config.json  expected.json  metadata.json
examples/spring-petclinic/: README.md  ariadne.config.json  expected.json  metadata.json
hooks/: pre-commit
query/: query.py
scanner/: __init__.py  backend_client_scanner.py  cube_scanner.py  frontend_rest_scanner.py  frontend_scanner.py  graphql_scanner.py  http_scanner.py  kafka_scanner.py  ts_http_outbound_scanner.py
scoring/: embedder.py  engine.py
scripts/: adoption_snapshot.py
store/: db.py  embedding_db.py  feedback_db.py
temp/: ariadne-onnx-migration.md
tests/: test_adoption_snapshot.py  test_auto_detect.py  test_benchmark.py  test_demo_recording.py  test_distribution_metadata.py  test_evaluation.py  test_examples.py  test_fastapi_scanner.py  test_feedback_boost.py  test_feedback_form.py  test_http_scanner_naming.py  test_implicit_feedback.py  test_onnx_embedder.py  test_semantic_hint.py
