[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ariadne"
version = "0.1.0"
description = "Cross-service API dependency graph and semantic code navigation for microservice architectures. CLI + MCP server for Claude Code, Cursor, and Windsurf."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "whyy9527" }]
requires-python = ">=3.10"
dependencies = [
    "mcp",
]

[project.urls]
Homepage = "https://github.com/whyy9527/ariadne"
Issues = "https://github.com/whyy9527/ariadne/issues"

[project.scripts]
ariadne = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["normalizer*", "query*", "scanner*", "scoring*", "store*"]

[tool.setuptools]
py-modules = ["main"]
